--- a/cosmic ocassion by mehak/celebration.css
+++ b/cosmic ocassion by mehak/celebration.css
@@ -1,6 +1,20 @@
-
+@font-face {
+  font-family: 'Absolute Beauty';
+  src: url('Absolute-Beauty-Script-Regular.otf') format('opentype');
+  font-style: normal;
+}
+@font-face {
+  font-family:'LibreBaskerville-Regular';
+  src: url('LibreBaskerville-Regular.ttf');
+  font-style: normal;
+}
+@font-face {
+  font-family:'theseasons';
+  src: url('Fontspring-DEMO-theseasons-reg.otf') format('opentype');
+  font-style: normal;
+}
 body {
-    font-family: 'Baskervville SC', serif;
+  font-family:'LibreBaskerville-Regular';
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -63,11 +77,7 @@ h1 {
   
   
   }
-  #myVideo {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; 
-  }
+  
 #ima {
     border: 10px solid #6c7d5a;
     padding: 13px;
@@ -79,6 +89,7 @@ h1 {
 #ima:hover {
     transform: scale(1.05);
 }
+
 
 
 
@@ -97,7 +108,99 @@ h1 {
         margin-bottom:-30px;
     }
 }
-
+footer{
+    background-color: #6c7d5a;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  table{
+    margin-left:0;
+    margin-right:0;
+    margin-bottom:1%;
+  }
+  .logo-container {
+    background-color: #6c7d5a;
+    display: flex;
+    align-items: center;
+    color: #fff;
+  }
+  .logo img{
+    height:100px;
+  }
+  .line {
+    flex-grow: 1;
+    height: 2px;
+    background-color: #fff;
+    margin: 0 20px;
+  }
+  @media (max-width: 768px) {
+    .logo {
+        font-size: 1.5rem;
+    }
+  
+    .line {
+        margin: 0 10px;
+    }
+  }
+  .next h6{
+    font-family: "Libre Baskerville", serif;
+    color:white;
+    font-size:55%;
+  }
+  .next p{
+    font-family: 'Absolute Beauty';
+    color: #fff;
+    font-size:60px;
+    text-align: center;
+  }
+  .next h7{
+    color: #fff;
+    font-family: "Libre Baskerville", serif;
+    font-size:70%;
+  }
+  #link {
+    background-image: url('Ann-Travis-Botanical4-removebg-preview.png');
+    background-size: cover;
+    background-position: center;
+    padding: 20px;
+    list-style: none;
+    text-decoration: none;
+    color: #c7a4a4;
+    font-family: "Libre Baskerville", serif;
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+  
+  #link li {
+    margin: 10px 0;
+  }
+  
+  #link li a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+  }
+  #one{
+    margin-right:1px;
+  }
+  #lg{
+    height:130px;
+    width:130px;
+  }
+  #button{
+    text-decoration: none;
+    font-family: "Libre Baskerville", serif;
+    color: #fff;
+    border: 1.5px solid #fff;
+    padding:12px;
+    font-size: small;
+  }
+  #button:hover{
+    background-color: #fff;
+    color: #6c7d5a;
+  }
 @media (max-width: 576px) {
     #ima {
         width: 150px;
