--- a/cosmic ocassion by mehak/contact.css
+++ b/cosmic ocassion by mehak/contact.css
@@ -1,12 +1,18 @@
 @font-face {
-    font-family: 'LibreBaskerville-Regular';
-    src: url('LibreBaskerville-Regular.eot?#iefix') format('embedded-opentype'),
-         url('LibreBaskerville-Regular.woff2') format('woff2'),
-         url('LibreBaskerville-Regular.woff') format('woff'),
-         url('LibreBaskerville-Regular.ttf') format('truetype');
-    font-style: normal;
+  font-family: 'Absolute Beauty';
+  src: url('Absolute-Beauty-Script-Regular.otf') format('opentype');
+  font-style: normal;
 }
-
+@font-face {
+  font-family:'LibreBaskerville-Regular';
+  src: url('LibreBaskerville-Regular.ttf');
+  font-style: normal;
+}
+@font-face {
+  font-family:'theseasons';
+  src: url('Fontspring-DEMO-theseasons-reg.otf') format('opentype');
+  font-style: normal;
+}
 * {
     font-family: 'LibreBaskerville-Regular', serif;
     box-sizing: border-box;
@@ -15,6 +21,7 @@
 }
 
 body {
+  font-family:'LibreBaskerville-Regular';
     background-color: #6c7d5a;
 }
 
@@ -52,6 +59,7 @@ body {
     text-align: center;
     color: white;
     font-size: 3rem;
+    font-family: 'Absolute Beauty';
 }
 
 #p {
@@ -101,7 +109,99 @@ width:100px;
 form input[type="submit"]:hover {
     background-color: #ddd;
 }
-
+footer{
+    background-color: #6c7d5a;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  table{
+    margin-left:0;
+    margin-right:0;
+    margin-bottom:1%;
+  }
+  .logo-container {
+    background-color: #6c7d5a;
+    display: flex;
+    align-items: center;
+    color: #fff;
+  }
+  .logo img{
+    height:100px;
+  }
+  .line {
+    flex-grow: 1;
+    height: 2px;
+    background-color: #fff;
+    margin: 0 20px;
+  }
+  @media (max-width: 768px) {
+    .logo {
+        font-size: 1.5rem;
+    }
+  
+    .line {
+        margin: 0 10px;
+    }
+  }
+  .next h6{
+    font-family: "Libre Baskerville", serif;
+    color:white;
+    font-size:55%;
+  }
+  .next p{
+    font-family: 'Absolute Beauty';
+    color: #fff;
+    font-size:60px;
+    text-align: center;
+  }
+  .next h7{
+    color: #fff;
+    font-family: "Libre Baskerville", serif;
+    font-size:70%;
+  }
+  #link {
+    background-image: url('Ann-Travis-Botanical4-removebg-preview.png');
+    background-size: cover;
+    background-position: center;
+    padding: 20px;
+    list-style: none;
+    text-decoration: none;
+    color: #c7a4a4;
+    font-family: "Libre Baskerville", serif;
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+  
+  #link li {
+    margin: 10px 0;
+  }
+  
+  #link li a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+  }
+  #one{
+    margin-right:1px;
+  }
+  #lg{
+    height:130px;
+    width:130px;
+  }
+  #button{
+    text-decoration: none;
+    font-family: "Libre Baskerville", serif;
+    color: #fff;
+    border: 1.5px solid #fff;
+    padding:12px;
+    font-size: small;
+  }
+  #button:hover{
+    background-color: #fff;
+    color: #6c7d5a;
+  }
 @media screen and (max-width: 768px) {
     #contactus {
         font-size: 2rem;
