--- a/services.css
+++ b/services.css
@@ -102,6 +102,8 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    font-family:'LibreBaskerville-Regular';
+    font-size: small;
 }
 
 #nation {
