--- a/services.css
+++ b/services.css
@@ -52,13 +52,23 @@ body {
     }
 }
 
-
-#serve {
+/* #serve {
     width: 100%;
     height: 700px;
     object-fit: cover; 
-}
-
+} */
+.un{
+    position: relative;
+    height: 90vh;
+    background-image:url('services main.jpg');
+    background-position: 50% 94%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin: 0%;
+    padding: 0%;
+    padding-top:200px;
+    background-attachment: fixed;
+ }
 
 #m {
     text-align: center;
