--- a/contact.css
+++ b/contact.css
@@ -72,7 +72,7 @@ body {
     color: white;
     margin: 0 auto;
     max-width: 800px; 
-    padding: 1em;
+    /* padding: 1em; */
     font-size: 1.5rem;
 }
 
