--- a/porfolio.css
+++ b/porfolio.css
@@ -18,21 +18,42 @@ body {
     padding: 0;
     font-family:'theseasons';
 }
-.navbar {
-    padding: 1rem 2rem;
+.navbar{
+  height:70px;
+  font-family: "Libre Baskerville", serif;
+}
+.navbar-brand img {
+  width: 80px;
+}
+.navbar-nav {
+  align-items: center;
   }
-  
+.navbar .navbar-nav .nav-link {
+  color: #fff;
+  font-size: 1.1em;
+  padding: 0.5em 1em;
+}
+@media screen and (min-width: 768px) {
   .navbar-brand img {
-    height: 100px;
-    margin-top:-40px;
+    width: 100px;
   }
-  
-  .nav-link {
-    font-family: 'Libre Baskerville', serif;
-    font-size: 1.2rem;
-    color: #fff !important;
-    margin: 0 15px;
+  .navbar-brand {
+    margin-right: 0;
+    padding: 0 1em;
   }
+} 
+.s-5 {
+  margin-left:350px;
+}
+.img-fluid{
+   max-width: 100%;                                                                                      
+   height: auto;
+}
+@media only screen and (max-width: 480px) {
+img-fluid {
+  width: 100%;
+}
+}
 
 
 #back {
