--- a/porfolio.css
+++ b/porfolio.css
@@ -105,7 +105,7 @@ td {
     padding:10px;
 }
 
-img {
+#k{
     width: 100%;
     height: 250px; 
     object-fit: cover; 
@@ -246,7 +246,7 @@ footer{
         margin-bottom: 20px;
     }
 
-    img {
+    #k{
         max-width: 100%; 
         height: auto; 
     }
@@ -284,7 +284,7 @@ footer{
         margin-bottom: 20px;
     }
 
-    img {
+    #k{
         max-width: 100%; 
         height: auto; 
     }
