--- a/Expense Tracker.css
+++ b/Expense Tracker.css
@@ -28,18 +28,11 @@
   src: url('Absolute-Beauty-Script-Regular.otf') format('opentype');
   font-style: normal;
 }
-body{
-  background-color: #fffffc;
-}
-main{
-    position: relative;
-    height: 90vh;
-    background-image: url('1-Calder-Clark-Wedding-Planner-Dulcie+Nelson-Montana-Destination-Event-Design.jpg');
-    background-position: 50% 94%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    margin: 0%;
-    padding: 0%;
+main {
+  background-image: url(CC-wedding-pattern-design-stripes.jpg);
+  background-position:90% 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 .navbar{
     height:70px;
@@ -77,194 +70,158 @@ main{
     width: 100%;
   }
 }
-/* ___________________________________ */@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Ruda:wght@400;600;700&display=swap");
-
+/* ___________________________________ */@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap');
 :root {
-  --light: #f6f6f9;
-  --primary: #1976d2;
-  --light-primary: #cfe8ff;
-  --grey: #fff;
-  --dark-grey: #aaaaaa;
-  --dark: #363949;
-  --danger: #d32f2f;
-  --light-danger: #fecdd3;
-  --warning: #fbc02d;
-  --light-warning: #fff2c6;
-  --success: #388e3c;
-  --light-success: #bbf7d0;
+  font-family: 'DM Sans', sans-serif;
+  --width:35rem;
+  --SoftRed: #6c7d5a;
+  --DarkBrown: hsl(25, 47%, 15%);
+  --MediumBrown: hsl(28, 10%, 53%);
+  --Cream: hsl(0, 0%, 96%);
+  --paleOrange: hsl(0, 0%, 97%);
 }
-body {
+
+.center {
   display: flex;
   align-items: center;
   justify-content: center;
-  height:100%;
-  background-color: var(--light);
-  font-family: "poppins", sans-serif;
 }
+
 .container {
-  max-width: 1280px;
+  height: 100vh;
+  width: 100vw;
+  flex-direction: column;
+  margin-top: 1rem;
+}
+
+.balanceHead {
+  height: 6rem;
+  width: var(--width);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: var(--SoftRed);
+  color: white;
+  border-radius: 1rem;
+}
+
+.balanceHead > * {
+  padding: 1rem;
+}
+
+.balanceHead p {
+  font-size: 1.1rem;
+  font-weight: 700;
+}
+
+.formContainer {
+  height: 18rem;
+  width: var(--width);
+  display: flex;
+  flex-direction: column;
+  border-radius: 1rem;
+  background-color: white;
+  margin: 1rem 0rem;
+  border: 1px solid #6c7d5a;
+}
+
+.formContainer>* {
+  padding: 1rem;
+}
+
+.expenseInput, .budgetInput {
   width: 100%;
-  margin: 0 auto;
-  background-color: var(--grey);
-  border-radius: 5px;
-  box-shadow: 5px 5px 10px #000;
-  overflow-x: hidden;
-}
-.container h2 {
-  padding: 2rem 0;
-  font-size: 4rem;
-  text-align: center;
-  color: var(--dark);
-}
-.error_message {
-  background-color: var(--danger);
-  color: var(--light);
-  text-align: center;
-  padding: 1rem 0;
-  width: 650px;
-  margin: 0 auto;
-  border-radius: 5px;
-  display: none;
-}
-.error_message.error {
-  display: block;
-  transition: all 0.8s ease-in;
-}
-.budget_content {
-  padding: 2rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  flex-wrap: wrap;
-  gap: 2rem;
 }
-.ur_budget form input,
-.ur_expenses form input {
-  padding: 0.4rem 1rem;
-  width: 300px;
-  border: 1px solid #ddd;
-  font-family: inherit;
+
+input, button, select {
+  height: 2.8rem;
+  border-radius: 0.5rem;
   font-size: 1rem;
-  margin-left: 0.5rem;
-  border-radius: 3px;
 }
-.ur_budget form input:focus,
-.ur_expenses form input:focus {
-  outline: none;
+
+.budgetInput input {
+  width: 75%;
 }
-.ur_budget form,
-.ur_expenses form {
-  position: relative;
-}
-.budget_content .btn {
-  position: absolute;
-  right: 0;
-  outline: none;
-  border: none;
-  font-family: inherit;
-  padding: 0.6rem 1rem;
-  color: var(--light);
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
+
+button {
+  width: 23%;
+  color: white;
+  background-color: var(--SoftRed);
+  border-color: var(--SoftRed);
   cursor: pointer;
-  background-color: var(--dark);
 }
-.budget_content .btn:active {
-  transform: scale(0.98);
+
+.expenseInput input, .expenseInput select {
+  width: 24%;
 }
-/*================Cards Start================= */
-.container .cards {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-  grid-gap: 1.5rem;
-  padding: 2rem;
+
+.expenseList {
+  height: auto;
+  margin-bottom: 2rem;
 }
-.container .cards li {
-  padding: 1.8rem;
-  background-color: var(--light);
-  border-radius: 5px;
+
+#abc {
+  font-size: 1.1rem;
+  border-collapse: collapse;
+  margin: 0rem 1rem;
+}
+
+#abc, #lk,#op {
+  border-bottom: 0.1rem solid var(--MediumBrown);
+}
+
+#yz td {
+  font-weight: 700;
+}
+
+#op {
+  padding: 0.5rem;
+  background-color: var(--paleOrange);
+}
+
+.removebtn {
+  height: 1.5rem;
+  width: 1.5rem;
+  border-radius: 50%;
+  background-color: var(--SoftRed);
+  color: white;
+  font-weight: 700;
   display: flex;
-  align-items: center;
-  gap: 1.5rem;
-  cursor: pointer;
-  transition: all 0.3s ease-in;
-}
-.container .cards li:hover {
-  transform: translateY(-10px);
-}
-.container .cards li .bx {
-  width: 4.5rem;
-  height: 4.5rem;
-  border-radius: 10px;
-  font-size: 36px;
-  display: flex;
-  align-items: center;
   justify-content: center;
-}
-.container .cards li:nth-child(1) .bx {
-  background-color: var(--light-primary);
-  color: var(--primary);
-}
-.container .cards li:nth-child(2) .bx {
-  background-color: var(--light-warning);
-  color: var(--warning);
-}
-.container .cards li:nth-child(3) .bx {
-  background-color: var(--light-success);
-  color: var(--success);
-}
-.container .cards li .info h3 {
-  font-size: 1.5rem;
-  font-weight: 600;
-  color: var(--dark);
-}
-.container .cards li .info p {
-  color: var(--dark);
-}
-/*================Cards Close================= */
-/*==================Start Table Content============= */
-.tbl_content {
-  padding: 2rem;
-  background-color: var(--light);
-  margin: 1rem 2rem;
-  border-radius: 5px;
-}
-.tbl_content h3 {
-  font-size: 2rem;
-  margin: 1rem 0;
-}
-.tbl_tr_content {
-  display: grid;
-  list-style-type: none;
-  grid-template-columns: 1fr 50% 30% 2fr;
   align-items: center;
-  background-color: var(--dark);
-  color: var(--light);
-  padding: 0.5rem 1rem;
-  border-radius: 5px;
-  margin: 0.5rem 0;
+  float: right;
   cursor: pointer;
 }
-.tbl_data {
-  overflow-y: auto;
-  height: 200px;
+
+.error {
+  color: var(--red) !important;
+  border: 0.15rem solid rgb(255, 57, 57) !important; 
 }
-.tbl_tr_content button {
-  outline: none;
-  border: none;
-  color: var(--light);
-  padding: 0.4rem;
-  border-radius: 5px;
-  cursor: pointer;
-  background-color: var(--danger);
+
+@media only screen and (min-width: 300px) and (max-width: 400px) {
+  :root {
+      font-size: 8px;
+  }
 }
-.tbl_tr_content button:active {
-  transform: scale(0.98);
+
+@media only screen and (min-width: 400px) and (max-width: 500px) {
+  :root {
+      font-size: 10px;
+  }
 }
-.tbl_tr_content button:first-child {
-  background-color: var(--success);
+
+.overview, .balanceHead {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: var(--width);
 }
-/*==================Start Table Close============= */
+
+
 /* ------------------------------------------- */
 footer{
     background-color: #6c7d5a;
