--- a/Expense Tracker.css
+++ b/Expense Tracker.css
@@ -112,6 +112,7 @@ main {
 .balanceHead p {
   font-size: 1.1rem;
   font-weight: 700;
+  font-family:'theseasons';
 }
 
 .formContainer {
@@ -124,7 +125,9 @@ main {
   margin: 1rem 0rem;
   border: 1px solid #6c7d5a;
 }
-
+.formContainer h3{
+  font-family:'LibreBaskerville-Regular';
+}
 .formContainer>* {
   padding: 1rem;
 }
