--- a/pika.css
+++ b/pika.css
@@ -2,7 +2,7 @@
     margin : 0;
     padding: 0;
     box-sizing : border-box;
-    font-familly : "Poppins", sans-serif;
+    font-family : "Poppins", sans-serif;
   }
   body {
     display : flex;
@@ -18,7 +18,7 @@
     display : flex;
     align-items : center;
     justify-content : center;
-    flex-warp : warp;
+    flex-wrap : wrap;
     padding : 30px;  
   }
   
@@ -63,7 +63,6 @@
     padding : 10px 15px;
     color : #111;
     text-align : center;
-    
     visibility : hidden;
     opacity : 0;
     transition : 0.3s ease-in-out;
