--- a/Expense Tracker.css
+++ b/Expense Tracker.css
@@ -72,7 +72,8 @@ background: radial-gradient(circle, rgba(108,125,90,1) 0%, rgba(185,194,177,1) 2
     width: 100%;
   }
 }
-/* ___________________________________ */@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap');
+/* ___________________________________ */
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap');
 :root {
   font-family: 'DM Sans', sans-serif;
   --width:35rem;
